<resources>
    <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">-->
    <!--AIzaSyBqlSBLi7iUeXXm0hQd0s1OXYwzeM-4GsY</string>-->
    <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">-->
    <!--AIzaSyCkr5gUvw1Ruk8OPCPdTmyJxVR-W4Lt1-A</string>-->

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyA65lbp6No9rI2mnE2L6oohfRQ6zMEFhqo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">Mumbai 360\u00B0</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hi_charchgate">चर्चगेट</string>
    <string name="charchgate">charchgate</string>

    <string name="harber">HARBOUR</string>
    <string name="center">CENTRAL</string>
    <string name="western">WESTERN</string>

    <string name="toward_surat">SURAT</string>
    <string name="toward_roha">ROHA</string>
    <string name="toward_kasara_khopoli">KASARA/KHOPOLI</string>

    <string name="no">No</string>
    <string name="time">TIME</string>
    <string name="station_name">STATION</string>
    <string name="duration">DURATION</string>

    <string name="up">UP</string>
    <string name="down">DOWN</string>

    <string name="menu_search">Search</string>
    <string name="menu_location">Location</string>
    <string name="menu_voice">Voice Search</string>
    <string name="from_station_name">094942172668</string>


    <!--     CENTRAL LINE STATION -->
    <string name="mumbai_cst">MUMBAI CST</string>
    <string name="masjid">MASJID</string>
    <string name="sandurst_rd">SANDHURST RD</string>
    <string name="byculla">BYCULLA</string>
    <string name="chinchpokli">CHINCHPOKLI</string>
    <string name="curry_road">CURRY ROAD</string>
    <string name="parel">PAREL</string>
    <string name="dadar">DADAR</string>
    <string name="matunga">MATUNGA</string>
    <string name="sion">SION</string>
    <string name="kurla">KURLA</string>
    <string name="vidya_vihar">VIDYA VIHAR</string>
    <string name="ghatkopar">GHATKOPAR</string>
    <string name="vikhroli">VIKHROLI</string>
    <string name="kanjur_marg">KANJUR MARG</string>
    <string name="bhandup">BHANDUP</string>
    <string name="nahur">NAHUR</string>
    <string name="mulund">MULUND</string>
    <string name="thane">THANE</string>
    <string name="kalwa">KALWA</string>
    <string name="mumbra">MUMBRA</string>
    <string name="diva">DIVA</string>
    <string name="kopar">KOPAR</string>
    <string name="dombivli">DOMBIVLI</string>
    <string name="thakurli">THAKURLI</string>
    <string name="kalyan">KALYAN</string>
    <string name="vithalwadi">VITHALWADI</string>
    <string name="ulhasnagar">ULHASNAGAR</string>
    <string name="ambernath">AMBERNATH</string>
    <string name="badlapur">BADLAPUR</string>
    <string name="vangani">VANGANI</string>
    <string name="shelu">SHELU</string>
    <string name="neral">NERAL</string>
    <string name="bhivpuri_rd">BHIVPURI RD</string>
    <string name="karjat">KARJAT</string>
    <string name="palasdari">PALASDARI</string>
    <string name="kelavli">KELAVLI</string>
    <string name="dolavli">DOLAVLI</string>
    <string name="lowjee">LOWJEE</string>
    <string name="khopoli">KHOPOLI</string>

    <string name="Shahad">Shahad</string>
    <string name="Ambivli">Ambivli</string>
    <string name="Titvala">Titvala</string>
    <string name="Khadavli">Khadavli</string>
    <string name="Vasind">Vasind</string>
    <string name="Asangaon">Asangaon</string>
    <string name="Atgaon">Atgaon</string>
    <string name="Khardi">Khardi</string>
    <string name="Umberali">Umberali</string>
    <string name="Kasara">Kasara</string>
    <string name="Vasai_Road">Vasai Road</string>
    <string name="Juchandra">Juchandra</string>
    <string name="Kaman_Road">Kaman Road</string>
    <string name="Kharbao">Kharbao</string>
    <string name="Bhiwandi">Bhiwandi</string>
    <string name="Dativali">Dativali</string>
    <string name="Nilaje">Nilaje</string>
    <string name="Taloja">Taloja</string>
    <string name="Navade_Road">Navade Road</string>
    <string name="Kalamboli">Kalamboli</string>
    <string name="Panvel">Panvel</string>
    <string name="Jummapatti">Jummapatti</string>
    <string name="Water_pipe">Water pipe</string>
    <string name="Aman_Lodge">Aman_Lodge</string>
    <string name="Matheran">Matheran</string>
    <!-- <string name=""></string> -->
    <!-- <string name=""></string> -->
    <!-- <string name=""></string> -->
    <string name="splash_text"> Mumbai\n360\u00B0</string>
    <string name="title_activity_up_down">UpDownActivity</string>
    <string name="title_activity_train_schedule">TrainScheduleActivity</string>

    <string name="action_voice_rec">action voice rec</string>
    <string name="action_location">action location</string>
    <string name="action_taxi">action taxi</string>
    <string name="action_change_colors">change style</string>
    <string name="title_activity_language_preference">Prefer Language</string>

    <string name="language_english">English</string>
    <string name="language_hindi">हिंदी</string>
    <string name="language_marathi">मराठी</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="menu_logout">Log out</string>

    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="lbl_forgot_password">Forgot password?</string>


    <string name="menu_login">Log in</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Enter registered email</string>
    <string name="sign_in">Sign In</string>
</resources>
