<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="mumbai.d360.forum.SignInActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


    <TextView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="Roadpali Forum"
        android:textColor="@color/colorAccent"
        android:drawableTop="@drawable/ic_forum_post"
        android:textSize="25sp"
         />

    <LinearLayout
        android:id="@+id/layout_email_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/black" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/field_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:maxLines="1"
                android:maxLength="20"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/black" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email_password"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@android:color/white"
            android:elevation="4dp"
            android:text="@string/sign_in" />


        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/sign_up" />

    </LinearLayout>
        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
